src/test/ui/generic-associated-types/issue-62326-parameter-out-of-range.stderr
error[E0311]: the associated type `<Self as Iterator>::Item<'a>` may not live long enough
  --> $DIR/issue-62326-parameter-out-of-range.rs:7:20
   |
LL |     type Item<'a>: 'a;
   |                    ^^
   |
   = note: the associated type `<Self as Iterator>::Item<'a>` must be valid for any other region...
   = help: consider adding an explicit lifetime bound `<Self as Iterator>::Item<'a>: 'a`...
   = note: ...so that the type `<Self as Iterator>::Item<'a>` will meet its required lifetime bounds

error: aborting due to previous error

